--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-#! /bin/sh
+#! /bin/bash
 
 while getopts "l:" opt; do
     case "$opt" in
@@ -58,8 +58,8 @@ function copyInputrc {
 }
 
 if [ ! $INPUTRC ]; then
-  if [ -e ${HOME}/.inputrc ] && diff src/inputrc ${HOME}/.inputrc > /dev/null; then
-    echo 'inputrc already exists, do you want to overwite?'
+  if [ -e ${HOME}/.inputrc ] && ! diff src/inputrc ${HOME}/.inputrc > /dev/null; then
+    echo 'inputrc already exists, do you want to overwite? y/n'
     read input
     case ${input} in
       y | Y | yes)
@@ -80,8 +80,8 @@ function copyGitconfig {
 }
 
 if [ ! $INPUTRC ]; then
-  if [ -e ${HOME}/.gitconfig ] && diff src/gitconfig ${HOME}/.gitconfig > /dev/null; then
-    echo 'gitconfig already exists, do you want to overwite?'
+  if [ -e ${HOME}/.gitconfig ] && ! diff src/gitconfig ${HOME}/.gitconfig > /dev/null; then
+    echo 'gitconfig already exists, do you want to overwite? y/n'
     read input
     case ${input} in
       y | Y | yes)
