--- a/install
+++ b/install
@@ -122,6 +122,11 @@ if [[ ! $vpatched ]]; then
   mv ./tmp ${VIMRC}
 fi
 
-# Install vundle
+# Copy Vim directory
 cp src/vim/* ${VIM_DIR}
+
+# Transparent Monokai colorscheme
+cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
+
 vi +PluginInstall +qall
+
