--- a/install
+++ b/install
@@ -16,8 +16,6 @@ function prependFile {
   fi
 }
 
-
-
 while getopts "l:" opt; do
     case "$opt" in
     l)  LOCAL=1
@@ -56,12 +54,9 @@ cp -r src/bash/* ${BASH_DIR}
 if [ -e ${BASHRC} ]; then
   # Backup bashrc incase something goes wrong
   cp ${BASHRC} ${BASHRC}.bak
-else
-  touch ${BASHRC}
 fi
 
-grep -q 'source ${HOME}/.bash/aliases'  ${BASHRC} && patched=true
-if [[ ! $patched ]]; then
+if grep -q 'source ${HOME}/.bash/aliases' ${BASHRC}; then
   prependFile src/bashrc ${BASHRC}
 fi
 
@@ -73,7 +68,7 @@ source ${BASHRC}
 
 # GHCi Config
 if [ -e ${GHCI} ]; then
-  if [ "$(grep -q 'prompt' ${GHCI})" ]; then
+  if grep -q 'prompt' ${GHCI}; then
     prependFile src/ghci ${GHCI}
   fi
 else
@@ -155,12 +150,9 @@ mkdir -p ${VIM_DIR}
 if [ -e ${VIMRC} ]; then
   # Backup vimrc incase something goes wrong
   cp ${VIMRC} ${VIMRC}.bak
-else
-  touch ${VIMRC}
 fi
 
-grep -q 'Vim configurations added by github.com/Jiggins/Bash-Config' ${VIMRC} && vpatched=true
-if [[ ! $vpatched ]]; then
+if grep -q 'Vim configurations added by github.com/Jiggins/Bash-Config' ${VIMRC}; then
   prependFile src/vimrc ${VIMRC}
 fi
 
@@ -171,5 +163,4 @@ vi +PluginInstall +qall
 
 # Transparent Monokai colorscheme
 cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
-
 
