--- a/install
+++ b/install
@@ -55,7 +55,7 @@ if [ -e ${BASHRC} ]; then
   cp ${BASHRC} ${BASHRC}.bak
 fi
 
-if grep -q 'source ${HOME}/.bash/aliases' ${BASHRC}; then
+if [ ! -e ${BASHRC} ] || ! grep -q 'source ${HOME}/.bash/aliases' ${BASHRC}; then
   prependFile src/bashrc ${BASHRC}
 fi
 
@@ -151,7 +151,7 @@ if [ -e ${VIMRC} ]; then
   cp ${VIMRC} ${VIMRC}.bak
 fi
 
-if grep -q 'Vim configurations added by github.com/Jiggins/Bash-Config' ${VIMRC}; then
+if [ ! -e ${VIMRC} ] || ! grep -q 'Vim configurations added by github.com/Jiggins/Bash-Config' ${VIMRC}; then
   prependFile src/vimrc ${VIMRC}
 fi
 
