--- a/install
+++ b/install
@@ -59,10 +59,13 @@ if [ ! -e ${BASHRC} ] || ! grep -q 'source ${HOME}/.bash/aliases' ${BASHRC}; the
   prependFile src/bashrc ${BASHRC}
 fi
 
+## Scripts
+
 # git-forest - Pretty git log alternative
 mkdir -p ${BASH_DIR}/scripts
 wget -nv -o /dev/null -O ${BASH_DIR}/scripts/git-forest https://raw.githubusercontent.com/jwiegley/git-scripts/master/git-forest
-chmod +x ${BASH_DIR}/scripts/git-forest
+
+chmod +x ${BASH_DIR}/scripts/*
 
 source ${BASHRC}
 
