--- a/install
+++ b/install
@@ -73,7 +73,7 @@ VIMRC="${HOME}/.vimrc"
 
 # Install config directory
 mkdir ${VERBOSE} -p ${HOME}/.config
-cp ${VERBOSE} -r src/config/ ${HOME}/.config
+cp ${VERBOSE} -r src/config/* ${HOME}/.config
 
 # Install rcfiles
 for f in src/rcfiles/*; do
@@ -99,7 +99,6 @@ if commandExists wget; then
     fi
   done
 
-  chmod +x ${BASH_DIR}/scripts/*
 
   # Powerline Fonts
   if [ ! -e ${HOME}/.fonts/ubuntu-mono-power ] && [ ! -e ${HOME}/.config/fontconfig/conf.d ]; then
@@ -133,17 +132,12 @@ if commandExists pip; then
   else
     pip install -q --user --editable=${HOME}/.config/vim/bundle/powerline
   fi
-
-  ln -fs ${HOME}/.config/vim/bundle/powerline/powerline/scripts/powerline ${HOME}/.config/bash/scripts
 fi
 
 # Vi mode in ghci!
 if ! grep -q "editMode vi" ${HOME}/.haskeline; then
   echo "editMode: Vi" >> ${HOME}/.haskeline
 fi
-
-# Transparent Monokai colorscheme
-cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
 
 # Installing Vim plugins
 vi +PluginInstall +qall
@@ -162,6 +156,11 @@ case `uname` in
   *)
     sed -i '2s/ formatoptions+=j//' ${VIM_DIR}/bundle/haskell-vim/after/ftplugin/haskell.vim
 esac
+
+# Make Scripts executable
+chmod +x ${HOME}/.config/vim/bundle/powerline/scripts/powerline*
+ln -fs ${HOME}/.config/vim/bundle/powerline/scripts/powerline* ${HOME}/.config/bash/scripts
+chmod +x ${BASH_DIR}/scripts/*
 
 source ${BASHRC}
 
