--- a/install
+++ b/install
@@ -67,13 +67,16 @@ BASHRC="${HOME}/.bashrc"
 BASH_DIR="${HOME}/.config/bash"
 GHCI="${HOME}/.ghci"
 TMUX="${HOME}/.tmux.conf"
-VIM_DIR="${HOME}/.config/vim"
+VIM_DIR="${HOME}/.vim"
 VIMRC="${HOME}/.vimrc"
 # VERBOSE='-v'
 
 # Install config directory
 mkdir ${VERBOSE} -p ${HOME}/.config
+mkdir ${VERBOSE} -p ${HOME}/.vim
 cp ${VERBOSE} -r src/config/ ${HOME}/.config
+
+cp ${VERBOSE} -r src/vim/* ${HOME}/.vim
 
 # Install rcfiles
 for f in src/rcfiles/*; do
@@ -108,7 +111,7 @@ if commandExists wget; then
     wget --quiet https://github.com/powerline/powerline/raw/develop/font/PowerlineSymbols.otf -O ${HOME}/.fonts/PowerlineSymbols.otf
     wget --quiet https://github.com/powerline/powerline/raw/develop/font/10-powerline-symbols.conf -O ${HOME}/.config/fontconfig/conf.d/10-powerline-symbols.conf
     git clone https://github.com/pdf/ubuntu-mono-powerline-ttf.git ${HOME}/.fonts/ubuntu-mono-power > /dev/null
-    fc-cache -vf | grep 'fc-cache:'
+    fc-cache -vf ~/.fonts | grep 'fc-cache:'
   fi
 fi
 
@@ -126,24 +129,10 @@ if command -v git > /dev/null; then
   ./src/gitconfig
 fi
 
-# Powerline installation
-if commandExists pip; then
-  if [ ${VERBOSE+x} ]; then
-    pip install --user --editable=${HOME}/.config/vim/bundle/powerline
-  else
-    pip install -q --user --editable=${HOME}/.config/vim/bundle/powerline
-  fi
-
-  ln -fs ${HOME}/.config/vim/bundle/powerline/powerline/scripts/powerline ${HOME}/.config/bash/scripts
-fi
-
 # Vi mode in ghci!
 if ! grep -q "editMode vi" ${HOME}/.haskeline; then
   echo "editMode: Vi" >> ${HOME}/.haskeline
 fi
-
-# Transparent Monokai colorscheme
-cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
 
 # Installing Vim plugins
 vi +PluginInstall +qall
@@ -153,7 +142,6 @@ cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
 
 # Quick fix for invalid format option error caused by haskell-vim
 # Odly Mac/FreeBSD takes an extra argument to sed, Ubuntu does not
-
 verbose "Applying patch to ${VIM_DIR}/bundle/haskell-vim/after/ftplugin/haskell.vim"
 case `uname` in
   'Darwin')
@@ -162,6 +150,19 @@ case `uname` in
   *)
     sed -i '2s/ formatoptions+=j//' ${VIM_DIR}/bundle/haskell-vim/after/ftplugin/haskell.vim
 esac
+
+# Powerline installation
+if commandExists pip; then
+  ln -fs ${HOME}/.vim/bundle/powerline/setup.py ${HOME}/.config/bash/scripts
+  export PATH="${PATH}:${HOME}/.config/bash/scripts"
+
+  if [ ${VERBOSE+x} ]; then
+    pip install --user --editable=${HOME}/.vim/bundle/powerline
+  else
+    pip install -q --user --editable=${HOME}/.vim/bundle/powerline
+  fi
+
+fi
 
 source ${BASHRC}
 
