Moved ~/.config/tmux ~/.tmux

--- a/install
+++ b/install
@@ -107,6 +107,7 @@ mkdir ${VERBOSE} -p ${HOME}/.vim
 
 cp ${VERBOSE} -r src/config/* ${HOME}/.config
 cp ${VERBOSE} -r src/vim/* ${HOME}/.vim
+cp ${VERBOSE} -r src/tmux/* ${HOME}/.tmux
 
 # Install rcfiles
 for f in src/rcfiles/*; do
