--- a/install
+++ b/install
@@ -169,8 +169,11 @@ fi
 # Installing Vim plugins
 vi +PluginInstall +qall
 
-# Transparent Monokai colorscheme
-cp src/Monokai-Transparent.vim ${VIM_DIR}/bundle/vim-colorschemes/colors/
+# Colourschemes
+mkdir -p ${VIM_DIR}/colors
+for i in src/vim/colorschemes/*; do
+  cp $i ${VIM_DIR}/colors
+done
 
 # Powerline installation
 if commandExists pip; then
