Install script for vim-proc

--- a/install
+++ b/install
@@ -170,6 +170,11 @@ fi
 # Installing Vim plugins
 vi +PluginInstall +qall
 
+# Install Vimproc
+if [ -e ${VIM_DIR}/bundle/vimproc.vim ]; then
+  ( cd ${VIM_DIR}/bundle/vimproc.vim; make ) 1>/dev/null
+fi
+
 # Colourschemes
 mkdir -p ${VIM_DIR}/colors
 for i in src/vim/colorschemes/*; do
